webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
# specification 规格说明 
spec:
# 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
  # template描述POD是什么样的
  template:
    metadata:
      labels:
      # selector找的就是这个label
        app: webook
    # pod的具体说明
    spec:
      containers:
        - name: webook
          image: golang/webook:v0.0
          ports:
            - containerPort: 8080
