webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules: # 当host为localhost的时候，访问路径前缀为/的时候，将请求转发到webook服务
    - host: live.webook.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: webook
                port:
                  number: 80
            path: /
